--- a/grid/01-grid-layout-1/style.css
+++ b/grid/01-grid-layout-1/style.css
@@ -45,3 +45,36 @@ body, html {
 .footer {
   background-color: #393f4d;
 }
+
+
+.container {
+  display: grid;
+  grid-template: 100px 100px 500px 100px / 300px 900px;
+  grid-template-areas: 
+    "header header"
+    "sidebar nav"
+    "sidebar article"
+    "footer footer"
+  ;
+  gap: 15px;
+}
+
+.header {
+  grid-area: header;
+}
+
+.sidebar {
+  grid-area: sidebar;
+}
+
+.nav {
+  grid-area: nav;
+}
+
+.article {
+  grid-area: article;
+}
+
+.footer {
+  grid-area: footer;
+}
